# pcre2-binding-demo

./: .gitmodules  Cargo.toml  LICENSE  Makefile  Question.md  README.md
pcre2-sys/: Cargo.toml  Makefile  README.md  build.rs  gen-bindings.sh
pcre2-sys/src/: bindings.rs  lib.rs
src/: main.rs
